Final version of project for mentor